welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: Non-zero integral values may not have a leading zero.
  return 10:00
            ^alarmClock:7: error: Non-zero integral values may not have a leading zero.
  return 7:00
           ^alarmClock:9: error: Non-zero integral values may not have a leading zero.
  return 10:00
            ^alarmClock:3: error: identifier expected but something found.
  return 10:00
            ^alarmClock:6: error: ';' expected but 'else' found.
  else if (vacation == false && day>=1 && day<=5)
  ^alarmClock:7: error: identifier expected but something found.
  return 7:00
           ^alarmClock:9: error: identifier expected but something found.
  return 10:00
            ^